{
    "name": "MasterControls",
    "maps": [
        {
            "name": "Player",
            "id": "33d76b72-bc68-4724-83b6-66172b187efc",
            "actions": [
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "88613a2d-95a2-452e-9865-3bfdb96161f7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Move_ForwardBackward",
                    "type": "Button",
                    "id": "7e94a78c-f037-446e-8685-dba8843d3745",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Move_Laterally",
                    "type": "Button",
                    "id": "4a9225ec-b807-4ea7-99fe-52f32391cfa7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "b1fac3bc-d717-4acc-bdfa-ce419f5fe3f0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f17d3879-0ca3-4f6b-b55f-80fe96b7061d",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard+Mouse",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a973ab6f-4a2c-44de-9860-e9da619ea681",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard+Mouse",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WS",
                    "id": "b7e6bea7-1907-4799-a3a9-03be41a34e33",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_ForwardBackward",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "ccc03555-4bc9-4d2e-ba6a-9426a5d944a7",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard+Mouse",
                    "action": "Move_ForwardBackward",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "5a2e235a-43b2-425e-b272-17d81bf4808d",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard+Mouse",
                    "action": "Move_ForwardBackward",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "AD",
                    "id": "79472ab9-69a1-4c21-b3f7-24811ba8425a",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_Laterally",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "a57d835f-e098-48ce-b0e6-cdb6ee953329",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard+Mouse",
                    "action": "Move_Laterally",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "2aef8b12-b7a9-4183-b257-a77da9b2c461",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard+Mouse",
                    "action": "Move_Laterally",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard+Mouse",
            "bindingGroup": "Keyboard+Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}